@@ -3,7 +3,6 @@ package com.sap.assignment.emissioncalculator.workflow;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.json.JsonMapper;
-import com.sap.assignment.emissioncalculator.models.Coordinates;
 import com.sap.assignment.emissioncalculator.models.InternalDataModel;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -11,17 +10,19 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
 
 import java.nio.charset.Charset;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.function.Function;
 
 import static com.sap.assignment.emissioncalculator.workflow.ConfigurationBean.API_TOKEN_HEADER_TYPE;
+import static com.sap.assignment.emissioncalculator.workflow.ConfigurationBean.GEOCODE_SEARCH_URL;
 
 @Component
 public class DistanceFetcherWorkFlow implements Function<InternalDataModel, InternalDataModel> {
@@ -40,37 +41,44 @@ public class DistanceFetcherWorkFlow implements Function<InternalDataModel, Inte
 
     @Override
     public InternalDataModel apply(InternalDataModel internalDataModel) {
-        internalDataModel.distance = fetchDistance(internalDataModel.startCityCoord, internalDataModel.endCityCoord);
-        return internalDataModel;
-    }
-
-    private double fetchDistance(List<Double> startCityCoord, List<Double> endCityCoord) {
         String payload = null;
         MatrixRequestV2 requestV2 = new MatrixRequestV2();
-        requestV2.locations = Arrays.asList(startCityCoord, endCityCoord);
+        requestV2.locations = List.of(internalDataModel.cityCoords.values());
         try {
             payload = jsonMapper.writeValueAsString(requestV2);
         } catch (JsonProcessingException e) {
             throw new RuntimeException(e);
         }
-
-        logger.info("MATRIX_V2_PROFILE Request: {}", payload);
-        String response = webClient
+        try {
+            logger.info("GEOCODE_SEARCH_URL Request: {}", jsonMapper.writeValueAsString(payload));
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
+        }
+        webClient
                 .method(HttpMethod.POST)
                 .contentType(MediaType.APPLICATION_JSON)
                 .accept(MediaType.APPLICATION_JSON)
                 .acceptCharset(Charset.defaultCharset())
                 .header(API_TOKEN_HEADER_TYPE, openRouteTokenApi)
-                .bodyValue(payload).retrieve()
-                .bodyToFlux(String.class)
-                .blockFirst();
-        logger.info("MATRIX_V2_PROFILE Request: {}", response);
-        return 42.000f;
+                .bodyValue(payload)
+                .exchangeToFlux(clientResponse -> {
+                    if (clientResponse.statusCode().equals(HttpStatus.OK)) {
+                        Flux<String> response = clientResponse.bodyToFlux(String.class);
+                        response.subscribe(s -> {
+                            internalDataModel.distance = 42.00f;
+                        });
+                    } else {
+                        throw new RuntimeException(GEOCODE_SEARCH_URL + " call failed");
+                    }
+                    return null;
+                });
+
+        return internalDataModel;
     }
 
     static class MatrixRequestV2 {
         @JsonProperty("locations")
-        public List<Double> locations;
+        public List<Collection<List<Double>>> locations;
     }
 
 }
